my-apps/media/bazarr/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bazarr
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
