my-apps/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /movies
          subPath: data/media/movies
        - name: media
          mountPath: /tv
          subPath: data/media/tv
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 512Mi
            cpu: 1000m
        securityContext:
          privileged: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config
      - name: media
        persistentVolumeClaim:
          claimName: bazarr-media
