my-apps/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 6767
    protocol: TCP
  selector:
    app: bazarr
